# VideoTagsPred

./: .gitignore  1.ipynb  README.md  llm-baseline.ipynb  process.ipynb  pyproject.toml  sample_submission.csv  video_transcriptions_small.csv  скрипт_проверки_Rutube.ipynb
src/: main.py
src/src/data_processing/: data_loader.py  text_cleaning.py
src/src/llm_integration/: llama_processor.py  prompt_templates.py
src/src/model_training/: feature_engineering.py  train_catboost.py
src/src/utils/: iou_calculator.py
utils/: transcription.py
